# Orderbook-Visualizer

./: Cargo.toml  README.md
src/: api.rs  client.rs  main.rs  models.rs  orderbook.rs  tui.rs  websocket.rs
