[package]
name = "orderbook-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clearscreen = "2.0.1"
crossterm = "0.27.0"
ordered-float = "4.1.1"
ratatui = "0.24.0"
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
url = "2.1.0"
